--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,12 +64,12 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginStart="8dp"
+                        android:layout_toEndOf="@+id/profilePhoto"
                         android:fontFamily="@font/lato_black"
                         android:text=""
                         android:textAlignment="center"
                         android:textColor="@color/textColor"
-                        android:textSize="16sp"
-                        android:layout_toEndOf="@+id/profilePhoto" />
+                        android:textSize="16sp" />
 
                 </RelativeLayout>
 
@@ -123,21 +123,24 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="1dp"
                     android:background="#1F121212" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginEnd="32dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginEnd="25dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="149dp"
+                        android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="16dp"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -161,15 +164,26 @@
                             android:textSize="16sp" />
                     </LinearLayout>
 
+                    <Space
+                        android:layout_width="16dp"
+                        android:layout_height="match_parent" />
+
                     <LinearLayout
-                        android:layout_width="2dp"
+                        android:layout_width="1dp"
                         android:layout_height="match_parent"
                         android:background="#1F121212" />
 
+                    <Space
+                        android:layout_width="16dp"
+                        android:layout_height="match_parent" />
+
                     <LinearLayout
-                        android:layout_width="149dp"
+                        android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="16dp"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -197,7 +211,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="1dp"
                     android:background="#1F121212" />
 
             </LinearLayout>
