--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -26,29 +26,47 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/lato_bold"
+                        android:fontFamily="@font/lato_black"
                         android:text="Reset Password"
                         android:textAppearance="?attr/textAppearanceHeadline6"
                         android:textColor="@color/textColor" />
 
                 </LinearLayout>
 
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="1dp"
                     android:background="#1F000000" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/lato"
+                        android:textColor="@color/textColor"
+                        android:text="Enter your account email here to reset your password."/>
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="8dp"/>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/inputEmail"
@@ -80,10 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="16sp">
+                android:layout_margin="16dp">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnConfirm"
