--- a/app/src/main/res/layout/dialog_scan_layout.xml
+++ b/app/src/main/res/layout/dialog_scan_layout.xml
@@ -19,22 +19,23 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:orientation="horizontal">
+                    android:background="@color/colorPrimary"
+                    android:orientation="horizontal"
+                    android:padding="16dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
-                        android:fontFamily="@font/lato_bold"
+                        android:fontFamily="@font/lato_black"
                         android:text="Ref. No.:"
-                        android:textColor="@color/textColor"
+                        android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
                     <TextView
@@ -46,20 +47,15 @@
                         android:fontFamily="@font/lato_bold"
                         android:maxLines="1"
                         android:text=""
-                        android:textColor="@color/textColor"
+                        android:textColor="#FFFFFF"
                         android:textSize="16sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="#1F000000" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView
@@ -93,18 +89,26 @@
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
                     </LinearLayout>
-
                 </LinearLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="6dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="1dp"
                     android:background="#1F000000" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:orientation="horizontal">
 
                     <LinearLayout
@@ -123,7 +127,7 @@
 
                         <Space
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="6dp" />
 
                         <TextView
 
@@ -191,24 +195,24 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Transport Name:"
-                            android:textSize="14sp"
-                            android:textColor="@color/textColor" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Driver Name:"
-                            android:textSize="14sp"
-                            android:textColor="@color/textColor" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Plate No.:"
-                            android:textSize="14sp"
-                            android:textColor="@color/textColor" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <Space
                             android:layout_width="match_parent"
@@ -314,8 +318,8 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text=""
-                            android:textSize="14sp"
-                            android:textColor="@color/textColor" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/bookingDriverName"
@@ -323,8 +327,8 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text=""
-                            android:textSize="14sp"
-                            android:textColor="@color/textColor" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/bookingPlateNumber"
@@ -332,8 +336,8 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text=""
-                            android:textSize="14sp"
-                            android:textColor="@color/textColor" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <Space
                             android:layout_width="match_parent"
@@ -367,9 +371,9 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_marginTop="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
                     android:gravity="end"
                     android:orientation="horizontal">
 
