--- a/app/src/main/res/layout/dialog_scan_layout.xml
+++ b/app/src/main/res/layout/dialog_scan_layout.xml
@@ -27,7 +27,10 @@
                     android:layout_marginBottom="8dp"
                     android:background="@color/colorPrimary"
                     android:orientation="horizontal"
-                    android:padding="16dp">
+                    android:paddingStart="16dp"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="16dp"
+                    android:paddingBottom="8dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -102,7 +105,7 @@
 
                 <Space
                     android:layout_width="match_parent"
-                    android:layout_height="8dp"/>
+                    android:layout_height="8dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -369,6 +372,15 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#1F000000" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
