--- a/app/src/main/res/layout/booking_admin_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_admin_pending_item_layout.xml
@@ -14,13 +14,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:padding="16dp"
+                android:background="@color/colorPrimary"
                 android:orientation="horizontal">
 
                 <TextView
@@ -28,10 +28,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:ellipsize="end"
-                    android:fontFamily="@font/lato_bold"
+                    android:fontFamily="@font/lato_black"
                     android:maxLines="1"
                     android:text="Ref. No.:"
-                    android:textColor="@color/textColor"
+                    android:textColor="#FFFFFF"
                     android:textSize="16sp" />
 
                 <TextView
@@ -43,20 +43,19 @@
                     android:fontFamily="@font/lato_bold"
                     android:maxLines="1"
                     android:text=""
-                    android:textColor="@color/textColor"
+                    android:textColor="#FFFFFF"
                     android:textSize="16sp" />
             </LinearLayout>
 
-            <LinearLayout
+            <Space
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#1F000000" />
+                android:layout_height="8dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:orientation="horizontal">
 
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -97,15 +96,24 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <Space
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#1F000000" />
+                android:layout_height="8dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#1F000000" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="8dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -129,7 +137,6 @@
                         android:layout_height="6dp" />
 
                     <TextView
-
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
@@ -311,7 +318,7 @@
 
                     <Space
                         android:layout_width="match_parent"
-                        android:layout_height="14sp" />
+                        android:layout_height="16dp" />
 
                     <TextView
                         android:id="@+id/bookingTransportName"
@@ -322,10 +329,15 @@
                         android:maxLines="1"
                         android:text=""
                         android:textColor="@color/textColor"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
 
                 </LinearLayout>
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="16dp"/>
+
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
