--- a/app/src/main/res/layout/booking_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_pending_item_layout.xml
@@ -3,6 +3,7 @@
     android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground">
@@ -28,6 +29,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -35,7 +37,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:ellipsize="end"
-                        android:fontFamily="@font/lato_bold"
+                        android:fontFamily="@font/lato_black"
                         android:maxLines="1"
                         android:text="Ref. No.:"
                         android:textColor="#FFFFFF"
@@ -54,12 +56,18 @@
                         android:textSize="16sp" />
                 </LinearLayout>
 
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_height="1dp"
                     android:background="#1FFFFFFF" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -70,8 +78,11 @@
                         android:id="@+id/customerPhoto"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:layout_marginEnd="10dp"
                         android:src="@drawable/placeholder_header_user_dp" />
+
+                    <Space
+                        android:layout_width="16dp"
+                        android:layout_height="match_parent" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -139,7 +150,7 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/lato"
                     android:maxLines="1"
-                    android:text="transport_name"
+                    android:text=""
                     android:textColor="#FFFFFF"
                     android:textSize="16sp" />
 
