--- a/app/src/main/res/layout/fragment_active_booking.xml
+++ b/app/src/main/res/layout/fragment_active_booking.xml
@@ -53,6 +53,10 @@
                 android:background="#1F000000" />
         </LinearLayout>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="8dp"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -72,6 +76,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/confirmedBookingList"
                 android:layout_width="match_parent"
+                android:background="#EEEEEE"
                 android:layout_height="match_parent"
                 android:visibility="gone" />
         </RelativeLayout>
@@ -122,6 +127,10 @@
                 android:layout_weight="5"
                 android:background="#80FFFFFF" />
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="8dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
