--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#0795ff</color>
     <color name="colorAccent">#474444</color>
 
-    <color name="colorBadgeBackground">@color/flat_red_2</color>
+    <color name="colorBadgeBackground">#0795ff</color>
 
     <color name="textColor">#121212</color>
     <color name="textColorHint">#99121212</color>
